--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 .DS_Store
 node_modules
-/dist
+dist
 
 
 # local env files
@@ -23,4 +23,4 @@ pnpm-debug.log*
 *.sw?
 
 # not commit files
-/src/assets
+assets
